--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,7 @@ playwright==1.40.0
 openai>=1.0.0
 python-dotenv>=1.0.0
 pydantic>=2.0.0
+pydantic-settings>=2.0.0
 beautifulsoup4>=4.12.0
 lxml>=4.9.0
 fastapi==0.104.1
